Terminate coalesced wheel events in MouseWheelEventQueue

The MouseWheelEventQueue was coalescing wheel events without
terminating the LatencyInfos of the events that are coalesced away.

Bug: 843237
Change-Id: Ice6d9a58dca7e9680f8476579362850582f738e0
Reviewed-on: https://chromium-review.googlesource.com/1060112
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562955}
Former-commit-id: ebca3b6951172f286cfcd9a114a1af2f371f34b9