content/browser/renderer_host/input/mouse_latency_browsertest.cc
@@ -39,14 +39,18 @@ const char kDataURL[] =
     "<html>"
     "<head>"
     "<title>Mouse event trace events reported.</title>"
-    "<script src=\"../../resources/testharness.js\"></script>"
-    "<script src=\"../../resources/testharnessreport.js\"></script>"
     "<script>"
     "  let i=0;"
     "  document.addEventListener('mousemove', () => {"
     "    var end = performance.now() + 20;"
     "    while(performance.now() < end);"
     "    document.body.style.backgroundColor = 'rgb(' + (i++) + ',0,0)'"
+    "  });"
+    "  document.addEventListener('wheel', (e) => {"
+    "    if (!e.cancelable)"
+    "      return;"
+    "    var end = performance.now() + 50;"
+    "    while(performance.now() < end);"
     "  });"
     "</script>"
     "<style>"
@@ -214,6 +218,24 @@ class MouseLatencyBrowserTest : public ContentBrowserTest {
     runner_->Run();
   }
 
+  // Generate mouse wheel scroll.
+  void DoSyncCoalescedMouseWheel(const gfx::PointF position,
+                                 const gfx::Vector2dF& delta) {
+    SyntheticSmoothScrollGestureParams params;
+    params.gesture_source_type = SyntheticGestureParams::MOUSE_INPUT;
+    params.anchor = position;
+    params.distances.push_back(delta);
+
+    GetWidgetHost()->QueueSyntheticGesture(
+        SyntheticGesture::Create(params),
+        base::BindOnce(&MouseLatencyBrowserTest::OnSyntheticGestureCompleted,
+                       base::Unretained(this)));
+
+    // Runs until we get the OnSyntheticGestureCompleted callback
+    runner_ = std::make_unique<base::RunLoop>();
+    runner_->Run();
+  }
+
   void StartTracing() {
     base::trace_event::TraceConfig trace_config(
         "{"
@@ -243,6 +265,37 @@ class MouseLatencyBrowserTest : public ContentBrowserTest {
     runner_ = std::make_unique<base::RunLoop>();
     runner_->Run();
     return trace_data_;
+  }
+
+  void AssertTraceIdsBeginAndEnd(const base::Value& trace_data,
+                                 const std::string& trace_event_name) {
+    const base::DictionaryValue* trace_data_dict;
+    ASSERT_TRUE(trace_data.GetAsDictionary(&trace_data_dict));
+
+    const base::ListValue* traceEvents;
+    ASSERT_TRUE(trace_data_dict->GetList("traceEvents", &traceEvents));
+
+    std::map<std::string, int> trace_ids;
+
+    for (size_t i = 0; i < traceEvents->GetSize(); ++i) {
+      const base::DictionaryValue* traceEvent;
+      ASSERT_TRUE(traceEvents->GetDictionary(i, &traceEvent));
+
+      std::string name;
+      ASSERT_TRUE(traceEvent->GetString("name", &name));
+
+      if (name != trace_event_name)
+        continue;
+
+      std::string id;
+      if (traceEvent->GetString("id", &id))
+        ++trace_ids[id];
+    }
+
+    for (auto i : trace_ids) {
+      // Each trace id should show up once for the begin, and once for the end.
+      EXPECT_EQ(2, i.second);
+    }
   }
 
  private:
@@ -331,34 +384,18 @@ IN_PROC_BROWSER_TEST_F(MouseLatencyBrowserTest,
       ->WaitFor("InputLatency::MouseUp");
   const base::Value& trace_data = StopTracing();
 
-  const base::DictionaryValue* trace_data_dict;
-  trace_data.GetAsDictionary(&trace_data_dict);
-  ASSERT_TRUE(trace_data.GetAsDictionary(&trace_data_dict));
+  AssertTraceIdsBeginAndEnd(trace_data, "InputLatency::MouseMove");
+}
 
-  const base::ListValue* traceEvents;
-  ASSERT_TRUE(trace_data_dict->GetList("traceEvents", &traceEvents));
+IN_PROC_BROWSER_TEST_F(MouseLatencyBrowserTest,
+                       CoalescedMouseWheelsCorrectlyTerminated) {
+  LoadURL();
 
-  std::map<std::string, int> trace_ids;
+  StartTracing();
+  DoSyncCoalescedMouseWheel(gfx::PointF(100, 100), gfx::Vector2dF(0, -100));
+  const base::Value& trace_data = StopTracing();
 
-  for (size_t i = 0; i < traceEvents->GetSize(); ++i) {
-    const base::DictionaryValue* traceEvent;
-    ASSERT_TRUE(traceEvents->GetDictionary(i, &traceEvent));
-
-    std::string name;
-    ASSERT_TRUE(traceEvent->GetString("name", &name));
-
-    if (name != "InputLatency::MouseMove")
-      continue;
-
-    std::string id;
-    if (traceEvent->GetString("id", &id))
-      ++trace_ids[id];
-  }
-
-  for (auto i : trace_ids) {
-    // Each trace id should show up once for the begin, and once for the end.
-    EXPECT_EQ(2, i.second);
-  }
+  AssertTraceIdsBeginAndEnd(trace_data, "InputLatency::MouseWheel");
 }
 
 }  // namespace content
